# CallistoCore

./: .gitignore  CMakeLists.txt  CallistoCore.cpp  CallistoCore.h  CallistoCore.ipp  README.md  pch.h
AutoGeneration/: CMakeLists.txt  README.md  main.cpp
AutoGeneration/CallistoCore/: Note.txt
AutoGeneration/CallistoCore/incl/: CallistoCore.h
